@@ -5,6 +5,11 @@
 
 char WinVisible(UltimateContext *uc);
 void ShapeFrame(UltimateContext *uc);
+
+#define UWM_GRAVITIZE (1)
+#define UWM_DEGRAVITIZE (-1)
+#define UWM_NOGRAVITIZE (0)
+void GravitizeWin(UltimateContext *uc, int *x, int *y, int mode);
 void EnborderWin(UltimateContext *uc);
 void UnmapWin(UltimateContext *uc);
 void MapWin(UltimateContext *uc,Bool NoPlacement);
